Update issue templates - labels additions

--- a/.github/ISSUE_TEMPLATE/-----------------------------.md
+++ b/.github/ISSUE_TEMPLATE/-----------------------------.md
@@ -2,7 +2,7 @@
 name: Запрос новой функциональности
 about: Запрос новой функциональности
 title: Запрос новой функциональности
-labels: ''
+labels: Ignore now
 assignees: ''
 
 ---
