Update issue templates - enhancements

--- a/.github/ISSUE_TEMPLATE/-----------------------------.md
+++ b/.github/ISSUE_TEMPLATE/-----------------------------.md
@@ -8,9 +8,10 @@ assignees: ''
 ---
 
 **Описание:**
-
+не предоставляется
 
 **Способ реализации:**
-
+не предоставляется
 
 **Альтернативные решения:**
+не предоставляются
