--- a/.github/ISSUE_TEMPLATE/-------------------.md
+++ b/.github/ISSUE_TEMPLATE/-------------------.md
@@ -8,16 +8,16 @@ assignees: ''
 ---
 
 **Описание:**
-
+не предоставляется
 
 **Метод воспроизведения:**
 1. ...
 2. ...
 
 **Ожидаемое поведение:**
-
+не предоставляется
 
 **Скриншоты:**
-
+не предоставляются
 
 **Версия библиотеки:** `версия`
