Update issue templates

--- a/.github/ISSUE_TEMPLATE/-----------------------------.md
+++ b/.github/ISSUE_TEMPLATE/-----------------------------.md
@@ -7,8 +7,12 @@ assignees: ''
 
 ---
 
-**Пространство имён**:
-**Платформа**:
+Область [**C**ode/**D**ocumentation/**R**epository]: C
+Ошибка ли это [**Y**es/**N**o]: N
+Важность [**L**ow, **M**edium, **H**igh]: L
+Категория [**U**tils/**E**xtensions/**O**ther]: O
+Пространство имён [напишите полное название, ?]: ?
+Платформа [**N**et/[all]/?]: ?
 
 **Описание:**
 не предоставляется
