--- a/.github/ISSUE_TEMPLATE/-------------------.md
+++ b/.github/ISSUE_TEMPLATE/-------------------.md
@@ -11,7 +11,7 @@ assignees: ''
 Ошибка ли это [**Y**es/**N**o]: N
 Важность [**L**ow, **M**edium, **H**igh]: L
 Категория [**U**tils/**E**xtensions/**O**ther]: O
-Пространство имён [напишите полное название, [root], ?]: ?
+Пространство имён [напишите полное название, ?]: ?
 Платформа [**N**et/[all]/?]: ?
 
 **Описание:**
