Update issue templates

--- a/.github/ISSUE_TEMPLATE/-----------------------------.md
+++ b/.github/ISSUE_TEMPLATE/-----------------------------.md
@@ -2,7 +2,7 @@
 name: Запрос новой функциональности
 about: Запрос новой функциональности
 title: Запрос новой функциональности
-labels: Ignore now
+labels: Ignore now, ☆
 assignees: ''
 
 ---
