--- a/.github/ISSUE_TEMPLATE/-------------------.md
+++ b/.github/ISSUE_TEMPLATE/-------------------.md
@@ -8,8 +8,8 @@ assignees: ''
 ---
 
 Область [**C**ode/**D**ocumentation/**R**epository]: C
-Ошибка ли это [**Y**es/**N**o]: N
-Важность [**L**ow, **M**edium, **H**igh]: L
+Ошибка ли это [**Y**es/**N**o]: Y
+Важность [**L**ow, **M**edium, **H**igh]: M
 Категория [**U**tils/**E**xtensions/**O**ther]: O
 Пространство имён [напишите полное название, ?]: ?
 Платформа [**N**et/[all]/?]: ?
