Update issue templates

--- a/.github/ISSUE_TEMPLATE/-------------------.md
+++ b/.github/ISSUE_TEMPLATE/-------------------.md
@@ -2,7 +2,7 @@
 name: Сообщение об ошибке
 about: Сообщение об ошибке
 title: Сообщение об ошибке
-labels: Ignore now, ☆
+labels: Ignore now
 assignees: ''
 
 ---
