Update issue templates

--- a/.github/ISSUE_TEMPLATE/------------------------------.md
+++ b/.github/ISSUE_TEMPLATE/------------------------------.md
@@ -1,17 +1,17 @@
 ---
-name: Сообщение об ошибке
-about: Сообщение об ошибке
-title: Сообщение об ошибке
+name: Сообщение о критической ошибке
+about: Сообщение о критической ошибке
+title: Сообщение о критической ошибке
 labels: Ignore now
 assignees: ''
 
 ---
 
-> Сообщение о некритической ошибке, возникновение которой не приводит к моментальному сбою в работе библиотеки или приложения. Если данная ошибка не удовлетворяет данному критерию, используйте шаблон "Сообщение о критической ошибке".
+> Сообщение о критической ошибке, возникновение которой моментально приводит к сбою в работе библиотеки или приложения. Если данная ошибка не удовлетворяет данному критерию, используйте шаблон "Сообщение об ошибке".
 
 Область [**C**ode/**D**ocumentation/**R**epository]: C
 Ошибка ли это [**Y**es/**N**o]: Y
-Важность [**L**ow, **M**edium, **H**igh]: M
+Важность [**L**ow, **M**edium, **H**igh]: H
 Категория [**U**tils/**E**xtensions/**O**ther]: O
 Пространство имён [напишите полное название, ?]: ?
 Платформа [**N**et/[all]/?]: ?
