Update issue templates

--- a/.github/ISSUE_TEMPLATE/-------------------.md
+++ b/.github/ISSUE_TEMPLATE/-------------------.md
@@ -1,13 +1,12 @@
 ---
 name: Сообщение об ошибке
-about: Сообщение об ошибке
+about: Сообщение о некритической ошибке, возникновение которой не приводит к моментальному
+  сбою в работе библиотеки или приложения.
 title: Сообщение об ошибке
 labels: Ignore now
 assignees: ''
 
 ---
-
-> Сообщение о некритической ошибке, возникновение которой не приводит к моментальному сбою в работе библиотеки или приложения. Если данная ошибка не удовлетворяет данному критерию, используйте шаблон "Сообщение о критической ошибке".
 
 Область [**C**ode/**D**ocumentation/**R**epository]: C
 Ошибка ли это [**Y**es/**N**o]: Y
