--- a/.github/ISSUE_TEMPLATE/------------------------------.md
+++ b/.github/ISSUE_TEMPLATE/------------------------------.md
@@ -1,13 +1,12 @@
 ---
 name: Сообщение о критической ошибке
-about: Сообщение о критической ошибке
+about: Сообщение о критической ошибке, возникновение которой моментально приводит
+  к сбою в работе библиотеки или приложения.
 title: Сообщение о критической ошибке
 labels: Ignore now
 assignees: ''
 
 ---
-
-> Сообщение о критической ошибке, возникновение которой моментально приводит к сбою в работе библиотеки или приложения. Если данная ошибка не удовлетворяет данному критерию, используйте шаблон "Сообщение об ошибке".
 
 Область [**C**ode/**D**ocumentation/**R**epository]: C
 Ошибка ли это [**Y**es/**N**o]: Y
