Update issue templates

--- a/.github/ISSUE_TEMPLATE/-----------------------------.md
+++ b/.github/ISSUE_TEMPLATE/-----------------------------.md
@@ -1,6 +1,7 @@
 ---
 name: Запрос новой функциональности
-about: Запрос новой функциональности
+about: Предложение по улучшению качества кода, API библиотеки или иной вещи, связанной
+  с данным проектом.
 title: Запрос новой функциональности
 labels: Ignore now
 assignees: ''
