--- a/.github/ISSUE_TEMPLATE/------------------------------.md
+++ b/.github/ISSUE_TEMPLATE/------------------------------.md
@@ -8,13 +8,6 @@ assignees: ''
 
 ---
 
-Область [**C**ode/**D**ocumentation/**R**epository]: C
-Ошибка ли это [**Y**es/**N**o]: Y
-Важность [**L**ow, **M**edium, **H**igh]: H
-Категория [**U**tils/**E**xtensions/**O**ther]: O
-Пространство имён [напишите полное название, ?]: ?
-Платформа [**N**et/[all]/?]: ?
-
 **Описание:**
 не предоставляется
 
@@ -27,5 +20,10 @@ assignees: ''
 
 **Скриншоты:**
 не предоставляются
+
+**Стек исключения:**
+```
+  // Пишите здесь.
+```
 
 **Версия библиотеки:** `версия`
