Update issue templates

--- a/.github/ISSUE_TEMPLATE/------------------------------.md
+++ b/.github/ISSUE_TEMPLATE/------------------------------.md
@@ -3,7 +3,7 @@ name: Сообщение о критической ошибке
 about: Сообщение о критической ошибке, возникновение которой моментально приводит
   к сбою в работе библиотеки или приложения.
 title: Сообщение о критической ошибке
-labels: Ignore now
+labels: Ignore now, bug-critical, importance-high
 assignees: ''
 
 ---
@@ -27,3 +27,4 @@ assignees: ''
 ```
 
 **Версия библиотеки:** `версия`
+**Автор:** [Имя](url)
