--- a/.github/ISSUE_TEMPLATE/-------------------.md
+++ b/.github/ISSUE_TEMPLATE/-------------------.md
@@ -3,7 +3,7 @@ name: Сообщение об ошибке
 about: Сообщение о некритической ошибке, возникновение которой не приводит к моментальному
   сбою в работе библиотеки или приложения.
 title: Сообщение об ошибке
-labels: Ignore now
+labels: Ignore now, bug-small, importance-medium
 assignees: ''
 
 ---
@@ -27,3 +27,4 @@ assignees: ''
 ```
 
 **Версия библиотеки:** `версия`
+**Автор:** [Имя](url)
